# workforce-mobile

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: styles.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  main.dart
lib/data/: announcements_repository.dart  availability_repository.dart  feed_repository.dart  leaves_repository.dart  local_db.dart  manager_repository.dart  messages_repository.dart  notifications_repository.dart  payslips_repository.dart  providers.dart  punch_repository.dart  shifts_repository.dart  user_repository.dart
lib/models/: announcement.dart  availability.dart  feed.dart  leave.dart  manager_models.dart  message.dart  notification_item.dart  payslip.dart  punch.dart  shift.dart  user_profile.dart
lib/screens/: announcements_screen.dart  availability_screen.dart  feed_screen.dart  home_screen.dart  leaves_screen.dart  login_screen.dart  manager_screen.dart  me_screen.dart  messages_screen.dart  notifications_screen.dart  payslips_screen.dart  profile_screen.dart  punch_screen.dart  shifts_screen.dart  thread_screen.dart
lib/widgets/: account_menu.dart  punch_button.dart
test/: punch_model_test.dart  widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
